--- a/footer.html
+++ b/footer.html
@@ -11,25 +11,29 @@
       background: #f9f9f9;
       display: flex;
       justify-content: center;
-      align-items: center;
-      height: 100px;
-    }
-    .footer-banner {
-      max-width: 728px;
-      width: 100%;
+      align-items: flex-start;
+      height: 110px;
+      flex-direction: column;
     }
     .ad-note {
       font-size: 12px;
       color: #777;
       text-align: center;
-      margin-bottom: 4px;
+      margin: 8px auto 4px;
       font-family: sans-serif;
+      width: 100%;
+    }
+    .footer-banner {
+      max-width: 728px;
+      width: 100%;
+      display: flex;
+      justify-content: center;
     }
   </style>
 </head>
 <body>
+  <div class="ad-note">Sponsored Ad – helps keep our indicators free!</div>
   <div class="footer-banner">
-    <div class="ad-note">Sponsored Ad – helps keep our indicators free!</div>
     <script type="text/javascript">
       atOptions = {
         'key': '45b2570164e71598cd2067d5e8bd652d',
@@ -43,3 +47,4 @@
   </div>
 </body>
 </html>
+
