--- a/footer.html
+++ b/footer.html
@@ -5,29 +5,32 @@
   <title>Footer Ad - FreeIndicatorsHub</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-    body {
+    html, body {
       margin: 0;
       padding: 0;
       background: #f9f9f9;
-      display: flex;
-      justify-content: center;
-      align-items: flex-start;
       height: 110px;
+      width: 100%;
+      display: flex;
       flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      font-family: sans-serif;
     }
+
     .ad-note {
       font-size: 12px;
       color: #777;
+      margin-bottom: 6px;
       text-align: center;
-      margin: 8px auto 4px;
-      font-family: sans-serif;
-      width: 100%;
     }
+
     .footer-banner {
-      max-width: 728px;
-      width: 100%;
+      width: 728px;
+      max-width: 100%;
       display: flex;
       justify-content: center;
+      align-items: center;
     }
   </style>
 </head>
@@ -47,4 +50,5 @@
   </div>
 </body>
 </html>
+
 
