--- a/wavelet-bands-download.html
+++ b/wavelet-bands-download.html
@@ -29,7 +29,7 @@
   </style>
   <script>
     setTimeout(function() {
-      window.location.href = "https://www.profitableratecpm.com/wzu8wkimfj?key=8634341cd85be780abd79a368a60c18f";
+      window.location.href = "https://ptr777.github.io/freeindicatorshub-ads/wavelet-ad-bridge.html";
     }, 5000); // Redirect after 5 seconds
   </script>
 </head>
