--- a/wavelet-bands-download.html
+++ b/wavelet-bands-download.html
@@ -1,44 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Wavelet Bands Download</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Preparing Download - Wavelet Bands</title>
   <style>
     body {
       font-family: Arial, sans-serif;
       text-align: center;
       padding-top: 100px;
-      background: #f2f2f2;
+      background-color: #f4f4f4;
     }
     .container {
       background: white;
-      max-width: 600px;
+      padding: 30px;
       margin: auto;
-      padding: 40px;
+      max-width: 500px;
       border-radius: 10px;
-      box-shadow: 0 0 15px rgba(0,0,0,0.2);
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
     }
     h1 {
-      font-size: 24px;
+      font-size: 22px;
       margin-bottom: 10px;
     }
     p {
       font-size: 16px;
+      color: #555;
     }
   </style>
   <script>
-    setTimeout(function() {
+    // Redirect to ad bridge page
+    setTimeout(function () {
       window.location.href = "https://ptr777.github.io/freeindicatorshub-ads/wavelet-ad-bridge.html";
-    }, 5000); // Redirect after 5 seconds
+    }, 4000); // Wait 4 seconds before redirect
   </script>
 </head>
 <body>
   <div class="container">
     <h1>Wavelet Bands Indicator</h1>
-    <p>Your download is being prepared...</p>
-    <p>Please wait a few seconds. You will be redirected shortly.</p>
-    <p><strong>If nothing happens, <a href="https://www.profitableratecpm.com/wzu8wkimfj?key=8634341cd85be780abd79a368a60c18f">click here</a>.</strong></p>
+    <p>We are preparing your download...</p>
+    <p>Please wait a moment while we redirect you.</p>
   </div>
 </body>
 </html>
+
