--- a/wavelet-ad.html
+++ b/wavelet-ad.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Loading Advertisement...</title>
+  <title>Advertisement - Please Wait</title>
   <style>
     body {
       margin: 0;
@@ -22,11 +22,10 @@
   <script>
     setTimeout(function () {
       window.location.href = "https://ptr777.github.io/freeindicatorshub-ads/wavelet-bands-final.html";
-    }, 15000); // Redirect to final download page after 15 seconds
+    }, 15000); // Redirect after 15 seconds
   </script>
 </head>
 <body>
-  <!-- Adsterra Direct Link in iframe -->
   <iframe src="https://www.profitableratecpm.com/wzu8wkimfj?key=8634341cd85be780abd79a368a60c18f"></iframe>
 </body>
 </html>
