--- a/wavelet-bands-download.html
+++ b/wavelet-bands-download.html
@@ -29,11 +29,11 @@
     }
   </style>
   <script>
-    // Redirect to ad bridge page
-    setTimeout(function () {
-      window.location.href = "https://ptr777.github.io/freeindicatorshub-ads/wavelet-ad-bridge.html";
-    }, 4000); // Wait 4 seconds before redirect
-  </script>
+  setTimeout(function () {
+    window.location.href = "https://ptr777.github.io/freeindicatorshub-ads/wavelet-ad.html";
+  }, 4000);  // Redirect after 4 seconds
+</script>
+
 </head>
 <body>
   <div class="container">
