--- a/wavelet-ad.html
+++ b/wavelet-ad.html
@@ -20,10 +20,10 @@
     }
   </style>
   <script>
-    setTimeout(function () {
-      window.location.href = "https://ptr777.github.io/freeindicatorshub-ads/wavelet-bands-final.html";
-    }, 15000); // Redirect after 15 seconds
-  </script>
+  setTimeout(function () {
+    window.location.href = "https://ptr777.github.io/freeindicatorshub-ads/wavelet-bands-final.html";
+  }, 15000); // Wait 15 seconds before redirecting
+</script>
 </head>
 <body>
   <iframe src="https://www.profitableratecpm.com/wzu8wkimfj?key=8634341cd85be780abd79a368a60c18f"></iframe>
