--- a/wavelet-ad.html
+++ b/wavelet-ad.html
@@ -22,7 +22,7 @@
   <script>
   setTimeout(function () {
     window.location.href = "https://ptr777.github.io/freeindicatorshub-ads/wavelet-bands-final.html";
-  }, 15000); // Wait 15 seconds before redirecting
+  }, 30000); // Wait 30 seconds (30000 ms) before redirecting
 </script>
 </head>
 <body>
