--- a/arrowx-final.html
+++ b/arrowx-final.html
@@ -24,16 +24,16 @@
       // After 4 seconds, redirect back to your site
       setTimeout(function () {
         window.location.href = "https://www.freeindicatorshub.com";
-      }, 4000); // You can change 4000 to 6000 or more for a longer delay
+      }, 4000); // You can change 4000 to 6000 or 10000 for longer delay
     };
   </script>
 </head>
 <body>
   <div class="message">
     <h2>Your download is starting...</h2>
-    <p>If it doesn't start automatically, <a href="https://drive.google.com/uc?export=download&id=1R0Ed8e13BZrYpP1TZcjlTNH4QIi2m0o7">click here</a>.</p>
+    <p>If it doesn't start automatically, 
+      <a href="https://drive.google.com/uc?export=download&id=1R0Ed8e13BZrYpP1TZcjlTNH4QIi2m0o7">click here</a>.
+    </p>
   </div>
 </body>
 </html>
-
-
