--- a/arrow-simulator-ad.html
+++ b/arrow-simulator-ad.html
@@ -44,7 +44,7 @@
   <div class="container">
     <div class="message">Your download will start automatically in:</div>
     <div class="countdown"><span id="timer">45</span> seconds</div>
-    <iframe src="https://www.profitableratecpm.com/wzu8wkimfj?key=8634341cd85be780abd79a368a60c18f" allowfullscreen></iframe>
+    <iframe src="https://www.profitableratecpm.com/wzu8wkimfj?key=8634341cd85be780abd79a368a60c18f?v=2" allowfullscreen></iframe>
   </div>
 </body>
 </html>
