--- a/wavelet-bands-download.html
+++ b/wavelet-bands-download.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Preparing Download - Wavelet Bands</title>
   <style>
     body {
@@ -19,28 +19,20 @@
       border-radius: 10px;
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
     }
-    h1 {
-      font-size: 22px;
-      margin-bottom: 10px;
-    }
-    p {
-      font-size: 16px;
-      color: #555;
-    }
+    h1 { font-size: 22px; margin-bottom: 10px; }
+    p { font-size: 16px; color: #555; }
   </style>
   <script>
-  setTimeout(function () {
-    window.location.href = "https://ptr777.github.io/freeindicatorshub-ads/wavelet-ad.html";
-  }, 4000);  // Redirect after 4 seconds
-</script>
-
+    setTimeout(function () {
+      window.location.href = "https://ptr777.github.io/freeindicatorshub-ads/wavelet-bands-ad.html";
+    }, 4000);
+  </script>
 </head>
 <body>
   <div class="container">
-    <h1>Wavelet Bands Indicator</h1>
+    <h1>Wavelet Bands</h1>
     <p>We are preparing your download...</p>
     <p>Please wait a moment while we redirect you.</p>
   </div>
 </body>
 </html>
-
