--- a/wavelet-bands-final.html
+++ b/wavelet-bands-final.html
@@ -2,53 +2,24 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Starting Download...</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #f4f4f4;
-      text-align: center;
-      padding-top: 100px;
-    }
-    .container {
-      background: white;
-      padding: 30px;
-      margin: auto;
-      max-width: 500px;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    }
-    h1 {
-      font-size: 22px;
-      margin-bottom: 10px;
-    }
-    p {
-      font-size: 16px;
-      color: #555;
-    }
-  </style>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Download Starting - Wavelet Bands</title>
   <script>
     window.onload = function () {
-      const link = document.createElement('a');
-      link.href = "https://drive.google.com/uc?export=download&id=1jeAtUFswY8hlm73vB8XuwGhbtF93vVIW";  <!-- Corrected download link -->
-      link.download = "Wavelet-Bands.ex4";  // You can change the filename here
-      document.body.appendChild(link);
-      link.click();
-      document.body.removeChild(link);
+      const downloadUrl = "https://drive.google.com/uc?export=download&id=1jeAtUFswY8hlm73vB8XuwGhbtF93vVIW";
+      const a = document.createElement("a");
+      a.href = downloadUrl;
+      a.download = "";
+      document.body.appendChild(a);
+      a.click();
 
-      // Redirect after download starts
-      setTimeout(function () {
-        window.location.href = "https://www.freeindicatorshub.com";  // Redirect to your main page
-      }, 8000);  // Wait 8 seconds before redirecting
-    }
+      setTimeout(() => {
+        window.close();
+      }, 5000);
+    };
   </script>
 </head>
 <body>
-  <div class="container">
-    <h1>Your download is starting...</h1>
-    <p>If it doesn't start automatically, <a href="https://drive.google.com/uc?export=download&id=1jeAtUFswY8hlm73vB8XuwGhbtF93vVIW">click here</a>.</p>
-    <p>You’ll be redirected back shortly.</p>
-  </div>
+  <h2 style="text-align:center; margin-top:100px;">Your download should begin shortly...</h2>
 </body>
 </html>
