--- a/ai-signalfusion-final.html
+++ b/ai-signalfusion-final.html
@@ -3,35 +3,23 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Download Starting – AI_SignalFusion</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #f9f9f9;
-      text-align: center;
-      padding-top: 100px;
-      color: #333;
-    }
-    .message { font-size: 20px; }
-  </style>
+  <title>Download Starting - AI SignalFusion</title>
   <script>
     window.onload = function () {
-      const fileUrl = "https://drive.google.com/uc?export=download&id=1v_XK6Jn33_tRec0qdm8wDKdVCWyaT8W3";
-      // Force download via location change
-      window.location.href = fileUrl;
-      // Fallback: open in new tab if needed
-      setTimeout(() => window.open(fileUrl, "_blank"), 500);
-      // Redirect back to your site after 6s
+      const downloadUrl = "https://drive.google.com/uc?export=download&id=1v_XK6Jn33_tRec0qdm8wDKdVCWyaT8W3";
+      const a = document.createElement("a");
+      a.href = downloadUrl;
+      a.download = "";
+      document.body.appendChild(a);
+      a.click();
+
       setTimeout(() => {
-        window.location.href = "https://www.freeindicatorshub.com";
-      }, 6000);
+        window.close();
+      }, 5000);
     };
   </script>
 </head>
 <body>
-  <div class="message">
-    <h2>Your download is starting...</h2>
-    <p>If it doesn’t start automatically, <a href="https://drive.google.com/uc?export=download&id=1v_XK6Jn33_tRec0qdm8wDKdVCWyaT8W3" target="_blank">click here</a>.</p>
-  </div>
+  <h2 style="text-align:center; margin-top:100px;">Your download should begin shortly...</h2>
 </body>
 </html>
