--- a/ai-signalfusion-download.html
+++ b/ai-signalfusion-download.html
@@ -2,37 +2,42 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Preparing Download – AI_SignalFusion</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Preparing Download - AI SignalFusion</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: #f4f4f4;
       text-align: center;
       padding-top: 100px;
+      background-color: #f4f4f4;
     }
     .container {
-      background: #fff;
+      background: white;
       padding: 30px;
       margin: auto;
       max-width: 500px;
       border-radius: 10px;
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
     }
-    h1 { margin-bottom: 10px; font-size: 22px; }
-    p  { color: #555; font-size: 16px; }
+    h1 {
+      font-size: 22px;
+      margin-bottom: 10px;
+    }
+    p {
+      font-size: 16px;
+      color: #555;
+    }
   </style>
   <script>
-    // After 4 seconds, go to the ad page
-    setTimeout(function() {
-      window.location.href = "https://ptr777.github.io/freeindicatorshub-ads/ai-signalfusion-ad.html";
+    setTimeout(function () {
+      window.location.href = "https://www.profitableratecpm.com/wzu8wkimfj?key=8634341cd85be780abd79a368a60c18f";
     }, 4000);
   </script>
 </head>
 <body>
   <div class="container">
-    <h1>AI_SignalFusion</h1>
-    <p>We’re preparing your download…</p>
+    <h1>AI SignalFusion Indicator</h1>
+    <p>We are preparing your download...</p>
     <p>Please wait a moment while we redirect you.</p>
   </div>
 </body>
