--- a/gold-strength-index-pro-download.html
+++ b/gold-strength-index-pro-download.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Preparing Download - Gold Strength Index Pro</title>
   <style>
     body {
@@ -19,18 +19,12 @@
       border-radius: 10px;
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
     }
-    h1 {
-      font-size: 22px;
-      margin-bottom: 10px;
-    }
-    p {
-      font-size: 16px;
-      color: #555;
-    }
+    h1 { font-size: 22px; margin-bottom: 10px; }
+    p { font-size: 16px; color: #555; }
   </style>
   <script>
     setTimeout(function () {
-      window.location.href = "https://www.profitableratecpm.com/wzu8wkimfj?key=8634341cd85be780abd79a368a60c18f";
+      window.location.href = "https://ptr777.github.io/freeindicatorshub-ads/gold-strength-index-pro-ad.html";
     }, 4000);
   </script>
 </head>
