--- a/gold-strength-index-pro-ad.html
+++ b/gold-strength-index-pro-ad.html
@@ -2,35 +2,54 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Almost There...</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Advertisement - Gold Strength Index Pro</title>
   <style>
     body {
-      text-align: center;
-      padding-top: 50px;
       font-family: Arial, sans-serif;
+      background: #f0f0f0;
+      text-align: center;
+      padding: 50px;
+    }
+    .ad-container {
+      background: #fff;
+      padding: 20px;
+      border-radius: 10px;
+      margin: auto;
+      max-width: 800px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
     }
     iframe {
-      width: 90%;
+      width: 100%;
       height: 400px;
       border: none;
-      max-width: 728px;
     }
-    .message {
-      margin-top: 20px;
-      font-size: 16px;
-      color: #333;
+    .countdown {
+      font-size: 18px;
+      margin-top: 15px;
+      color: #444;
     }
   </style>
-  <script>
-    setTimeout(function () {
-      window.location.href = "https://ptr777.github.io/freeindicatorshub-ads/gold-strength-index-pro-final.html";
-    }, 45000); // 45 seconds
-  </script>
 </head>
 <body>
-  <h2>Advertisement</h2>
-  <iframe src="https://www.profitableratecpm.com/wzu8wkimfj?key=8634341cd85be780abd79a368a60c18f"></iframe>
-  <div class="message">Your download will begin automatically after this short advertisement.</div>
+  <div class="ad-container">
+    <iframe src="https://www.profitableratecpm.com/wzu8wkimfj?key=8634341cd85be780abd79a368a60c18f"></iframe>
+    <div class="countdown" id="countdown">Your download will start in 45 seconds...</div>
+  </div>
+
+  <script>
+    let seconds = 45;
+    const countdownEl = document.getElementById("countdown");
+
+    const interval = setInterval(() => {
+      seconds--;
+      if (seconds > 0) {
+        countdownEl.textContent = `Your download will start in ${seconds} seconds...`;
+      } else {
+        clearInterval(interval);
+        window.location.href = "https://ptr777.github.io/freeindicatorshub-ads/gold-strength-index-pro-final.html";
+      }
+    }, 1000);
+  </script>
 </body>
 </html>
