Revise native banner HTML structure and styles
Updated styles and script source for the native banner ad.

--- a/native-banner.html
+++ b/native-banner.html
@@ -4,37 +4,34 @@
   <meta charset="UTF-8">
   <title>Native Banner Ad - FreeIndicatorsHub</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <style>
     html, body {
       margin: 0;
       padding: 0;
-      font-family: sans-serif;
       background: #ffffff;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100%;
+      overflow: hidden;
+      text-align: center;
     }
 
     .ad-note {
       font-size: 12px;
       color: #777;
-      margin: 10px 0;
-      text-align: center;
-    }
-
-    .native-ad-container {
-      width: 100%;
-      max-width: 100%;
+      margin: 8px 0;
     }
   </style>
 </head>
 <body>
-  <div class="ad-note">Sponsored Content – helps keep our tools free</div>
-  <div class="native-ad-container">
-    <script async="async" data-cfasync="false" src="//pl26540839.profitableratecpm.com/5d584048469dc41ba040501b85485ab2/invoke.js"></script>
-    <div id="container-5d584048469dc41ba040501b85485ab2"></div>
+
+  <div class="ad-note">
+    Sponsored Content – helps keep our tools free
   </div>
+
+  <!-- Adsterra Native Banner -->
+  <script async data-cfasync="false"
+    src="https://pl26540839.effectivegatecpm.com/5d584048469dc41ba040501b85485ab2/invoke.js">
+  </script>
+  <div id="container-5d584048469dc41ba040501b85485ab2"></div>
+
 </body>
 </html>
