Update native banner HTML structure and styles

--- a/native-banner.html
+++ b/native-banner.html
@@ -2,14 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Native Banner Ad - FreeIndicatorsHub</title>
+  <title>FreeIndicatorsHub Native Banner</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <style>
     html, body {
       margin: 0;
       padding: 0;
-      background: #ffffff;
+      width: 100%;
+      height: auto;
+      background: transparent;
       overflow: hidden;
       text-align: center;
     }
@@ -17,18 +18,16 @@
     .ad-note {
       font-size: 12px;
       color: #777;
-      margin: 8px 0;
+      margin: 5px 0;
     }
   </style>
 </head>
 <body>
 
-  <div class="ad-note">
-    Sponsored Content – helps keep our tools free
-  </div>
+  <div class="ad-note">Sponsored Content – helps keep our tools free</div>
 
   <!-- Adsterra Native Banner -->
-  <script async data-cfasync="false"
+  <script async data-cfasync="false" 
     src="https://pl26540839.effectivegatecpm.com/5d584048469dc41ba040501b85485ab2/invoke.js">
   </script>
   <div id="container-5d584048469dc41ba040501b85485ab2"></div>
