--- a/native-banner.html
+++ b/native-banner.html
@@ -1,36 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>FreeIndicatorsHub Native Banner</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>
-    html, body {
-      margin: 0;
-      padding: 0;
-      width: 100%;
-      height: auto;
-      background: transparent;
-      overflow: hidden;
-      text-align: center;
-    }
-
-    .ad-note {
-      font-size: 12px;
-      color: #777;
-      margin: 5px 0;
-    }
-  </style>
-</head>
-<body>
-
-  <div class="ad-note">Sponsored Content – helps keep our tools free</div>
-
-  <!-- Adsterra Native Banner -->
-  <script async data-cfasync="false"
-    src="https://pl28517759.effectivegatecpm.com/10bb50b47388feca7c8001142eddab71/invoke.js">
-  </script>
-  <div id="container-10bb50b47388feca7c8001142eddab71"></div>
-
-</body>
-</html>
+<!DOCTYPE html> <html lang="en"> <head> <meta charset="UTF-8"> <title>Native Banner Ad - FreeIndicatorsHub</title> <meta name="viewport" content="width=device-width, initial-scale=1.0"> <style> html, body { margin: 0; padding: 0; font-family: sans-serif; background: #ffffff; display: flex; flex-direction: column; align-items: center; justify-content: center; height: 100%; } .ad-note { font-size: 12px; color: #777; margin: 10px 0; text-align: center; } .native-ad-container { width: 100%; max-width: 100%; } </style> </head> <body> <div class="ad-note">Sponsored Content – helps keep our tools free</div> <div class="native-ad-container"> <script async="async" data-cfasync="false" src="//pl26540839.profitableratecpm.com/5d584048469dc41ba040501b85485ab2/invoke.js"></script> <div id="container-5d584048469dc41ba040501b85485ab2"></div> </div> </body> </html>
