--- a/index.html
+++ b/index.html
@@ -6,24 +6,22 @@
     <title>Ad Banner Embed</title>
     <style>
     html, body {
-        margin: 0 !important;
-        padding: 0 !important;
-        height: 100% !important;
-        overflow: hidden !important; /* Prevents scrollbars if ad overflows slightly */
-    }
-    #container-5d584048469dc41ba040501b85485ab2,
-    #container-5d584048469dc41ba040501b85485ab2 * {  /* Targets the container + any injected children */
-        margin-top: 0 !important;
-        margin-bottom: 0 !important;
-        padding-top: 0 !important;
-        padding-bottom: 0 !important;
-        margin: 0 auto !important; /* Centers horizontally if needed */
-    }
-    body {
-        display: flex;
-        justify-content: center;
-        align-items: flex-start; /* Align to top instead of center */
+        margin: 0;
+        padding: 0;
+        height: auto;          /* Let content determine height */
+        min-height: 100%;      /* Still fill iframe if needed */
         background: transparent;
+    }
+    #container-5d584048469dc41ba040501b85485ab2 {
+        width: 100%;
+        max-width: 728px;      /* Or 300px if rectangle; test what Adsterra uses */
+        margin: 0 auto;
+        padding: 0;
+    }
+    #container-5d584048469dc41ba040501b85485ab2 img {
+        max-width: 100% !important;
+        height: auto !important;
+        display: block !important; /* Ensures image shows inline */
     }
 </style>
 </head>
