Replace vertical banner ad with trader widget

--- a/vertical-banner.html
+++ b/vertical-banner.html
@@ -1,41 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Vertical Banner Ad</title>
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      background: #f9f9f9;
-    }
-    .ad-container {
-      width: 160px;
-      height: 600px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-      background: #fff;
-      overflow: hidden;
-      border-radius: 4px;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Trader Widget</title>
+    <style>
+        body { margin: 0; padding: 0; background: transparent; }
+        iframe { border: none; width: 100%; height: 100vh; }
+    </style>
 </head>
 <body>
-  <div class="ad-container">
-    <script type="text/javascript">
-      atOptions = {
-        'key' : '83db2ff041eb7531cd127fe0916e6307',
-        'format' : 'iframe',
-        'height' : 600,
-        'width' : 160,
-        'params' : {}
-      };
-    </script>
-    <script type="text/javascript" src="//www.highperformanceformat.com/83db2ff041eb7531cd127fe0916e6307/invoke.js"></script>
-  </div>
+    <iframe src="https://widgets.../trader-info/430897?&lang=en&utm_source=430897&utm_medium=refferal&utm_campaign=horizontaltraderwidget" 
+            width="500" height="440" scrolling="no" 
+            style="border: 0px solid rgb(216, 221, 230); border-radius: 3px; padding-top: 25px;">
+    </iframe>
 </body>
 </html>
