--- a/index.html
+++ b/index.html
@@ -3,31 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ad Banner Embed</title>
+    <title>Trader Widget</title>
     <style>
-    html, body {
-        margin: 0;
-        padding: 0;
-        height: auto;          /* Let content determine height */
-        min-height: 100%;      /* Still fill iframe if needed */
-        background: transparent;
-    }
-    #container-5d584048469dc41ba040501b85485ab2 {
-        width: 100%;
-        max-width: 728px;      /* Or 300px if rectangle; test what Adsterra uses */
-        margin: 0 auto;
-        padding: 0;
-    }
-    #container-5d584048469dc41ba040501b85485ab2 img {
-        max-width: 100% !important;
-        height: auto !important;
-        display: block !important; /* Ensures image shows inline */
-    }
-</style>
+        body { margin: 0; padding: 0; background: transparent; }
+        iframe { border: none; width: 100%; height: 100vh; }
+    </style>
 </head>
 <body>
-    <!-- Your exact Adsterra Native Banner Code -->
-    <script async="async" data-cfasync="false" src="https://pl26540839.effectivegatecpm.com/5d584048469dc41ba040501b85485ab2/invoke.js"></script>
-    <div id="container-5d584048469dc41ba040501b85485ab2"></div>
+    <iframe src="https://widgets.../trader-info/430897?&lang=en&utm_source=430897&utm_medium=refferal&utm_campaign=horizontaltraderwidget" 
+            width="500" height="440" scrolling="no" 
+            style="border: 0px solid rgb(216, 221, 230); border-radius: 3px; padding-top: 25px;">
+    </iframe>
 </body>
 </html>
